[package]
name = "per_test_directory"
version = "0.1.0"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
edition = "2018"

description = "fixture/attribute macro to create one directory per test run."
repository = "https://github.com/TyberiusPrime/per_test_directory"
readme = "readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"


[dependencies]
per_test_directory_macros="0.1"

